# interestriage

./: .betterleaks.toml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  specification.md  tsconfig.base.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: bootstrap-deps.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
backend/src/interestriage_backend/: __init__.py  __main__.py  app.py  config.py
cdoc/: _index.md  containerized-pip-audit-chainguard-viability.md  devcontainer-first-stages-environment.md  stage-0-foundation-implementation-devcontainer.md  supply-chain-hardening-pinning-cooldown.md  zizmor-action-workflow-viability.md
docs/: README.md
extension/: package.json  tsconfig.json
extension/scripts/: build-extension.mjs
extension/src/: background.ts  manifest.json  popup.html  popup.ts
infra/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.pip-audit
infra/dev/: docker-compose.yml  nginx.conf
infra/dev/evil-server/: Dockerfile  (+1 more)
infra/production/: Caddyfile  docker-compose.yml
mobile/: README.md
prompts/: README.md
scripts/: generate_sbom.py
shared/: package.json
shared/src/: index.ts
tests/integration/: test_audio_real_adapter.py  test_compose_image_tag_parity.py  test_ssrf_scaffold.py
tests/unit/: test_config.py  test_stub_tts.py
web/: package.json  tsconfig.json
web/scripts/: build-web.mjs
web/src/: index.html  main.ts
(+5 files in other folders)
